Story #9141 - Recuperation des informations depuis apogee a la place de LDAP